--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,61 +23,51 @@ h1 {
   padding-bottom: 20px;
 }
 
+h2 {
+  color: #000;
+  font-size: 40px;
+  text-align: left;
+  font-weight: lighter;
+  padding-top: 50px;
+  padding-bottom: 20px;
+  margin-left: 20px;
+  padding: 20px;
+  border-bottom: 1px solid #c6c9ce;
+  width: 70%;
+}
+
 p {
   color: #fff;
   font-size: 20px;
   font-weight: lighter;
 }
 
-.wrap {
-  background-color: #274668;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  text-align: center;
-  width: 450px;
-  height: 600px;
-  max-width: 500px;
+span {
+  margin-left: 20px;
+  width: 20%;
 }
 
-.wrap__header {
-  margin: 50px;
+.content__header {
+  margin: 0px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 
-.wrap__form {
-  text-align: left;
-  margin: 50px;
+.content__filter {
+  margin-top: 30px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: row;
+  width: 40%;
 }
 
-.wrap__label {
-  color: #fff;
-  font-size: 18px;
-  font-weight: lighter;
-}
-
-.wrap__button {
+.button--add {
   width: 350px;
   height: 50px;
   max-width: 350px;
   margin-top: 20px;
 }
-.wrap__link {
-  color: #fff;
-  font-size: 18px;
-  cursor: pointer;
-  font-weight: lighter;
-}
-
-.wrap__link:hover {
-  color: #fff;
-}
-
-.wrap__info {
-  margin: 20px 20px 70px 20px;
-}
-
-.wrap-container {
-  background-color: #fff;
-  display: flex;
-  flex-direction: row;
-  align-content: space-between;
+.content__table {
+  margin: 20px;
 }
