SCP-30 | Add form edit user and modal form delete user

--- a/pages/users/User.module.css
+++ b/pages/users/User.module.css
@@ -22,3 +22,18 @@
 .project {
   background-color: #3a4097;
 }
+
+.button_link {
+  background-color: transparent;
+  border: 0px;
+  text-decoration: underline;
+}
+
+.button_link:hover {
+  background-color: transparent;
+  color: #fb0808;
+}
+
+.delete {
+  color: #fb0808;
+}
