--- a/components/Layouts/Content/content.module.scss
+++ b/components/Layouts/Content/content.module.scss
@@ -3,9 +3,9 @@
   width: 100%;
   height: 500px;
   border: 1px solid #000;
-}
-.content p {
-  color: #000;
-  text-align: center;
-  font-size: 20px;
+  p {
+    color: #000;
+    text-align: center;
+    font-size: 20px;
+  }
 }
