--- a/components/Layouts/Footer/footer.module.scss
+++ b/components/Layouts/Footer/footer.module.scss
@@ -8,9 +8,9 @@
   font-size: 20px;
   border: 1px solid #c6c9ce;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.footer p {
-  color: #000;
-  text-align: center;
-  font-size: 20px;
+  p {
+    color: #000;
+    text-align: center;
+    font-size: 20px;
+  }
 }
