SCP-30 | Convert css to scss in User form

--- a/pages/users/user.module.scss
+++ b/pages/users/user.module.scss
@@ -27,13 +27,13 @@
   background-color: transparent;
   border: 0px;
   text-decoration: underline;
-}
 
-.button_link:hover {
-  background-color: transparent;
-  color: #fb0808;
-}
+  &:hover {
+    background-color: transparent;
+    color: #fb0808;
+  }
 
-.delete {
-  color: #fb0808;
+  &.delete {
+    color: #fb0808;
+  }
 }
