--- a/components/Layouts/Header/header.module.scss
+++ b/components/Layouts/Header/header.module.scss
@@ -8,11 +8,11 @@
   flex-direction: row;
   align-content: space-between;
 
-  &__title {
+  .headerTitle {
     width: 70%;
   }
 
-  &__link {
+  .headerLink {
     width: 30%;
     display: flex;
     flex-direction: row;
