--- a/pages/accounts/SignIn/signin.module.scss
+++ b/pages/accounts/SignIn/signin.module.scss
@@ -29,7 +29,6 @@
     max-width: 350px;
     margin-top: 20px;
   }
-
   .wrapLink {
     color: #fff;
     font-size: 18px;
@@ -40,14 +39,15 @@
       color: #fff;
     }
   }
-  .wrapLinkInfo {
+
+  .wrapInfo {
     margin: 20px 20px 70px 20px;
   }
-}
 
-.wrapContainer {
-  background-color: #fff;
-  display: flex;
-  flex-direction: row;
-  align-content: space-between;
+  .wrapContainer {
+    background-color: #fff;
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+  }
 }
