SCP-42| Edit navigation component

--- a/components/Layouts/Navigation/navigation.module.scss
+++ b/components/Layouts/Navigation/navigation.module.scss
@@ -11,6 +11,7 @@
 
     svg {
       vertical-align: baseline;
+      margin-right: 10px;
     }
 
     p {
@@ -28,12 +29,10 @@
         margin: 5px;
         padding: 10px;
         display: block;
-
-        a {
-          margin-left: 10px;
-          color: #000;
-          text-decoration: none;
-        }
+        margin-left: 10px;
+        color: #000;
+        text-decoration: none;
+        align-items: center;
 
         &:hover {
           background-color: #c6c9ce;
