SCP-31| Add UI project
Add form project list , add new project, edit project

--- a/pages/users/user.module.scss
+++ b/pages/users/user.module.scss
@@ -1,4 +1,4 @@
-.user__role {
+.userRole {
   margin: 0px;
   padding: 5px;
   width: 50%;
@@ -23,7 +23,7 @@
   background-color: #3a4097;
 }
 
-.button_link {
+.buttonLink {
   background-color: transparent;
   border: 0px;
   text-decoration: underline;
