--- a/pages/billings/billing.module.scss
+++ b/pages/billings/billing.module.scss
@@ -52,7 +52,7 @@
     }
 
     .wrapContent {
-      margin: 30px;
+      margin: 20px;
       border: 1px solid #c6c9ce;
       border-radius: 5px;
 
@@ -89,7 +89,6 @@
   display: flex;
   flex-direction: row;
   align-content: space-between;
-  width: 95%;
 }
 
 .decriptionContent {
@@ -98,4 +97,24 @@
   font-weight: lighter;
   margin: 20px;
   text-align: center;
+}
+
+.tableContent {
+  width: 70%;
+  margin: 20px;
+}
+
+.buttonLinkContent {
+  color: #000;
+  font-size: 20px;
+  font-weight: lighter;
+  background-color: transparent;
+  border: 0px;
+  margin-left: 20px;
+  text-decoration: none;
+  align-items: center;
+
+  &:hover {
+    color: #757474;
+  }
 }
