--- a/pages/droplets/droplet.module.scss
+++ b/pages/droplets/droplet.module.scss
@@ -22,6 +22,31 @@
   }
 }
 
+.svgSuccess {
+  font-size: 20px;
+  color: #28a745;
+}
+
+.contentHeader {
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  p {
+    color: #000;
+    font-size: 18px;
+    font-weight: bolder;
+    margin-left: 30px;
+    border-bottom: 1px solid #c6c9ce;
+  }
+
+  h2 {
+    border-bottom: 0px;
+    margin: 10px;
+  }
+}
+
 .subContainer {
   display: flex;
   flex-direction: row;
@@ -59,6 +84,7 @@
   .subContent {
     width: 95%;
     margin-left: 20px;
+    margin-bottom: 20px;
     border: 1px solid #c6c9ce;
 
     h2 {
@@ -81,30 +107,46 @@
       border: 1px solid #c6c9ce;
       border-radius: 5px;
 
-      .subWrap {
-        width: 30%;
-        align-self: center;
+      h3 {
+        margin-top: 20px;
+        margin-left: 20px;
+        margin-bottom: 20px;
+      }
 
-        .price {
-          font-weight: bold;
-          font-size: 30px;
-          padding: 0px 30px;
-          color: #000;
+      button {
+        width: 30%;
+        margin-top: 10px;
+      }
+      .wrap {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+
+        .subWrap {
+          width: 30%;
+          align-self: center;
+
+          .price {
+            font-weight: bold;
+            font-size: 30px;
+            padding: 0px 30px;
+            color: #000;
+          }
         }
       }
 
       .titleContent {
         margin: 20px;
         color: #000;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: bold;
       }
 
       .detailContent {
         margin-left: 20px;
         color: #757474;
-        font-size: 18px;
-        font-weight: bold;
+        font-size: 16px;
+        font-weight: lighter;
       }
     }
   }
@@ -112,7 +154,7 @@
 
 .display {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-content: space-between;
 }
 
